<resources>
    <string name="app_name">Login And Register Demo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lb_email">Email:</string>
    <string name="password">Password:</string>
    <string name="lb_fullname">Full Name:</string>
    <string name="lb_DOB">DOB</string>
    <string name="lb_gender">Gender</string>
    <string name="lb_gender_interested">Interested</string>
    <string name="lb_interested_age">Age Target</string>
    <string name="lb_race">Race:</string>
    <string name="upload_photo">Your photo:</string>
    <string name="upload">UPLOAD</string>
    <string name="Register">Register</string>
    <string name="zipcode">Zipcode:</string>
    <string name="height">Height:</string>
    <string name="hashed">Hashed:</string>

    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="year_arrays">
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
    </string-array>
    <string-array name="age_target">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
    </string-array>
    <string-array name="race_arrays">
        <item>White</item>
        <item>Hispanic or Latino</item>
        <item>Black</item>
        <item>Asian</item>
        <item>Native</item>
        <item>Others</item>
    </string-array>
</resources>
