<?xml version="1.0" encoding="utf-8"?>
<layout>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_summary_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transparent" />

    <TextView
        android:id="@+id/lb_summary_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lb_email"
        android:textColor="#FFB3B3B3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_summary_user" />

    <TextView
        android:id="@+id/et_summary_email"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#11000000"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_summary_user" />

    <TextView
        android:id="@+id/lb_summary_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_summary_email"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="#FFB3B3B3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_email" />

    <TextView
        android:id="@+id/et_summary_password"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_email" />

    <TextView
        android:id="@+id/lb_hash_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_summary_email"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/hashed"
        android:textColor="#FFB3B3B3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_password" />

    <TextView
        android:id="@+id/et_hash_password"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_password" />


    <TextView
        android:id="@+id/lb_summary_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/lb_fullname"
        android:textColor="#FFB3B3B3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_hash_password" />


    <TextView
        android:id="@+id/et_summary_name"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:ems="10"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_hash_password" />


    <TextView
        android:id="@+id/lb_summary_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/height"
        android:textColor="#FFB3B3B3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_name" />

    <TextView
        android:id="@+id/et_summary_height"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:textColor="#ffffff"
        app:layout_constraintStart_toEndOf="@+id/lb_summary_height"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_name" />

    <TextView
        android:id="@+id/lb_summary_zipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/zipcode"
        android:textColor="#FFB3B3B3"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/et_summary_zipcode"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_name" />

    <TextView
        android:id="@+id/et_summary_zipcode"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_name" />



    <TextView
        android:id="@+id/lb_summary_doe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/lb_DOB"
        android:textColor="#FFB3B3B3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_height" />

    <TextView
        android:id="@+id/tv_summary_dob_user"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/lb_summary_gender"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_height" />

    <TextView
        android:id="@+id/lb_summary_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lb_gender"
        android:textColor="#FFB3B3B3"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/sp_summary_gender"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_zipcode" />

    <TextView
        android:id="@+id/sp_summary_gender"
        android:layout_width="93dp"
        android:layout_height="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_summary_zipcode" />

    <TextView
        android:id="@+id/lb_summary_age_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/lb_interested_age"
        android:textColor="#FFB3B3B3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_summary_dob_user" />

    <TextView
        android:id="@+id/lb_summary_interested_gender"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:text="@string/lb_gender_interested"
        android:textColor="#FFB3B3B3"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/sp_summary_age_target"
        app:layout_constraintTop_toBottomOf="@+id/sp_summary_gender" />

    <TextView
        android:id="@+id/sp_summary_age_target"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_summary_dob_user" />
    <TextView
        android:id="@+id/sp_summary_interested_gender"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_summary_gender" />


    <TextView
        android:id="@+id/lb_summary_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/lb_race"
        android:textColor="#FFB3B3B3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_summary_age_target" />

    <TextView
        android:id="@+id/tv_summary_race"
        android:layout_width="271dp"
        android:layout_height="30dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_summary_age_target" />

    <Button
        android:id="@+id/btn_summary_upload"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_summary_race"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
</layout>